tests/paczka1/fuzzy1/93495479.err
Error in line 4: TTk S148 56,1
Error in line 6: TTk S962 27,9
Error in line 14: zOme2 S962 28,5
Error in line 2: S769 S845 38,6
Error in line 17: zOme2 S148 67,9
Error in line 20: zOme2 S769 31,8
Error in line 24: L8A3aqFzV S962 49,0
